@@ -1,3 +1,10 @@
+2003-07-18  Dennis Cranston <dennis_cranston at yahoo com>
+	
+	* gnome-network-capplet.png:  New file.
+
+	* Makefile.am, gnome-network-preferences.c:  Add the missing
+	window icon.
+
 2003-07-18  Christian Neumair  <chris@gnome-de.org>
 
 	* gnome-network-preferences.glade: Some more padding fixes.
